@@ -1,3 +1,13 @@
+2-22-2025
+- update changelog
+
+
+2-21-2025
+- add logout to waybar
+- swaylock config (no longer a white screen)
+- swaylock will now trigger when laptop lid is closed
+
+
 2-16-2025
 - remove garth config, replaced with twilight, a lenovo thinkpad x230 with coreboot skulls.
 - new cosmos theme
